2005-12-20  Johnny Jacob  <johnnyjacob@gmail.com>

	** See Bug #246233
	* e-filter-bar.c: (member_activated) : Changed "Search Editor" to
	"Searches"

2005-12-18  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Link with bootstrap libs on Win32. Use
	EVOLUTION_IMAGES instead of MAP_DIR for uniformity. Use
	EVOLUTION_MAIL_CFLAGS instead of E_WIDGETS_CFLAGS. Use privsolib
	instead of privlib (no difference on Unix). Use -no-undefined on
	Win32. Link with all required libraries.

	* e-attachment.c
	* e-send-options.c: Use gstdio wrappers. Construct glade file name
	at run-time.

	* e-map.c: Construct map file name at run-time.

	* gal-combo-text.c (strcase_equal): Use g_ascii_strcasecmp().
	(strcase_hash): Use g_ascii_tolower().

2005-12-15  Srinivasa Ragavan  <sragavan@novell.com>

	* e-filter-bar.c: (rule_advanced_response), (option_changed),
	(set_property): Added code to Show color in search widget.
	* e-search-bar.c: (entry_activated_cb),
	(activate_button_clicked_cb), (clear_button_clicked_cb): Added
	code to show color in search widget, when the filter is active.

2005-11-24  Tor Lillqvist  <tml@novell.com>

	* e-dateedit.c
	* e-cell-date-edit.c: Include e-time-utils.h from libedataserver
	instead of using evolution's copy which is going away.

2005-11-23  Johnny Jacob  <johnnyjacob@gmail.com>

	* e-dateedit.c: (on_date_entry_focus_out) (on_time_entry_focus_out) :
	Validation for date and time during focus out event.

2005-11-22  Johnny Jacob  <johnnyjacob@gmail.com>

	** See Bug #303856
	* e-dateedit.c: (create_children) : Added a signal handler
	for date_entry's "key_release_event".

2005-11-17  Harish Krishnaswamy  <kharish@novell.com>

	* e-attachment-bar.c: (update), (e_attachment_bar_set_width):
	Fix a division-by-zero error crasher.

2005-11-15  Srinivasa Ragavan <sragavan@novell.com>

	* e-attachment-bar.[ch] (e_attachment_bar_get_all_attachments): Added
	a function to get all attachments of the attachment bar for plugin
	purposes.
